--- a/Web/Styles/Job application.css
+++ b/Web/Styles/Job application.css
@@ -1,11 +1,10 @@
 .container {
-    border: 2px solid black;
+    border: 2px solid rgb(31, 31, 31);
     padding: 20px;
     margin: 20px;
-    background-color: rgb(253, 255, 241);
 }
 .field {
+    border: 1px solid rgb(76, 76, 76);
     padding: 20px;
     margin: 20px;
-    background-color: rgb(255, 255, 255);
 }
