--- a/Web/Styles/Jobs.css
+++ b/Web/Styles/Jobs.css
@@ -1,14 +1,16 @@
-.image{
-      width: 100%;
-      height: 400px;
-    }
-
-
-.btn-container {
-  text-align: center;   /* centers inline-block elements like <a> */
-  margin: 20px 0;       /* space above and below */
+/* Hero/banner image */
+.image {
+  width: 100%;
+  height: 400px;
 }
 
+/* Apply button container and alignment */
+.btn-container {
+  text-align: center;
+  margin: 20px 0;
+}
+
+/* Apply button default style */
 .apply-btn {
   display: inline-block;
   background-color: red;
@@ -20,7 +22,7 @@
   font-weight: bold;
 }
 
+/* Apply button hover effect */
 .apply-btn:hover {
   background-color: darkred;
 }
-
